--- a/Project2_HackerNews/Hacker_News.ipynb
+++ b/Project2_HackerNews/Hacker_News.ipynb
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort the values and print the top 5 hours with highest comments"
+    "## Sort the values and print the top 5 hours with highest Points\n"
    ]
   },
   {
